# truffle

./: .editorconfig  .gitignore  .markdown-link-check.json  .markdownlint.json  .prettierrc.yml  CHANGELOG.md  LICENSE.md  README.md  cspell.yaml  flake.nix  justfile  pyproject.toml  pyrightconfig.json
.github/workflows/: check.yml  docs.yml
.helix/: languages.toml
docs/: book.toml
docs/src/: introduction.md  schema.json
scripts/flake/: build.nix  check.nix  cli.nix  dev.nix  docs.nix  package.nix  python.nix
src/cli/: cspell.yaml  pyproject.toml
src/cli/src/truffle_cli/: __init__.py  __main__.py  environment.py  format.py
src/cli/src/truffle_cli/config/: __init__.py  abstract.py  input.py  static.py  system.py
src/cli/src/truffle_cli/html_processor/: __init__.py  abstract.py  beautiful_soup.py  input.py
src/cli/src/truffle_cli/http_client/: __init__.py  abstract.py  requests.py
src/cli/src/truffle_cli/llm_service/: __init__.py  abstract.py  input.py  openai.py
src/cli/src/truffle_cli/logger/: __init__.py  abstract.py  console.py
src/cli/src/truffle_cli/scraping_service/: __init__.py  abstract.py  input.py  zyte.py
src/cli/src/truffle_cli/system/: __init__.py  abstract.py  platform.py
src/cli/src/truffle_cli/worker/: __init__.py  abstract.py  input.py  output.py  sync.py
src/cli/src/truffle_cli/writer/: __init__.py  abstract.py  file.py  stdout.py
src/cli/src/truffle_cli_tests/: conftest.py  test_http_client.py  test_logger.py  test_system.py
